objects/User.object
<CustomObject>
    <fields>
        <fullName>Coll_Racf_Id__c</fullName>
        <label>Coll Racf Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_User_ID__c</fullName>
        <label>Collection User ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Id__c</fullName>
        <label>Genesys Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lan_Id__c</fullName>
        <label>Lan Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Service_Type__c</fullName>
        <label>Service Request Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Incoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Term Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Related Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota Term Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Request_User_Group__c</fullName>
        <label>Service Request User Group</label>
        <picklist>
            <picklistValues>
                <fullName>ADM COE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Solution Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2P System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDS System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Recovery System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO COE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate CRM Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR COE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS COE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Daily System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Control Clerk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBPP System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Management System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPAY System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOCUS General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Teleset_ID__c</fullName>
        <label>Teleset ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebLogin_Username__c</fullName>
        <label>WebLogin Username</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__GUS_User_Type__c</fullName>
        <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
        <label>GUS User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Notification_Level__c</fullName>
        <inlineHelpText>Adjusts how often you are sent emails about Work.

Bread &amp; Butter:  User comments and added as an Assignee
Meat &amp; Potatoes: User comments, status changes and added as Assignee
The Whole Enchilada: All notifications (Default)</inlineHelpText>
        <label>Work Notification Level</label>
        <picklist>
            <picklistValues>
                <fullName>Bread &amp; Butter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meat &amp; Potatoes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>The Whole Enchilada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Show_All_Work_Comments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show All Work Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team_Member_Allocation__c</fullName>
        <formula>HYPERLINK(&apos;/apex/adm_teammemberallocation?Id=&apos; +  Id, &apos;view&apos; )</formula>
        <label>Team Member Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Wall_Preference__c</fullName>
        <label>Wall Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Work_User_Interface__c</fullName>
        <inlineHelpText>Determines which version of the Work page you will see for Bugs and User Stories.</inlineHelpText>
        <label>Work User Interface</label>
        <picklist>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Generation</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>Lan_Id__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>InActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>In Active Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Reqd_LANID_and_RACFID_for_Collections</fullName>
        <active>true</active>
        <description>Users in Collections Profile must have Lan Id or Coll Racf Id field values</description>
        <errorConditionFormula>AND(
  BEGINS( Profile.Name , &quot;Collections&quot;),
  OR(
    ISBLANK(Coll_Racf_Id__c),
    ISBLANK(Lan_Id__c)
  )
)</errorConditionFormula>
        <errorMessage>Users in Collections Profile must have Lan Id or Coll Racf Id field values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_LANID_and_RACFID_for_Collections</fullName>
        <active>true</active>
        <description>Users in Collections roles must have Lan Id and Coll Racf Id field values</description>
        <errorConditionFormula>AND(
  BEGINS(UserRole.Name, &quot;Collections&quot;),
  OR(
    ISBLANK(Coll_Racf_Id__c),
    ISBLANK(Lan_Id__c)
  )
)</errorConditionFormula>
        <errorMessage>Users in Collections roles must have Lan Id and Coll Racf Id field values</errorMessage>
    </validationRules>
</CustomObject>